@@ -7,6 +7,9 @@ Current:
    Instead we call the original one now.
  * Animations now on load remember which slide they stopped at.
  * A more error-proof language selection.
+ * If the system looks like it uses UTF8 by default the locale name
+   that is passed to maxima now ends in ".UTF8" which should resolve
+   the "setting locale failed" errors from maxima.
 
 19.03.1:
  * HighDPI fixes for ArchLinux, Windows and SuSE
